aws/cloudformation/ec2withip.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "This template creates a ntier architecture",
    "Parameters": {
        "vpccidr": {
            "Description": "vpc cidr range",
            "Type": "String",
            "Default": "192.168.0.0/16"
        },
        "subnetcidrs": {
            "Description": "These are subnet ranges",
            "Type": "CommaDelimitedList",
            "Default": "192.168.0.0/24,192.168.1.0/24,192.168.2.0/24"
        },
        "webami": {
            "Description": "Ami id of web ec2",
            "Type": "AWS::EC2::Image::Id"
        },
        "webinstancetype": {
            "Description": "instance type",
            "Type": "String",
            "Default": "t2.micro"
        },
        "webkey": {
            "Description": "key pair for web",
            "Type": "AWS::EC2::KeyPair::KeyName"
        }
    },
    "Resources": {
        "myvpc": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "vpccidr"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "cfvpc"
                    }
                ]
            }
        },
        "db1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "ap-south-1a",
                "VpcId": {
                    "Ref": "myvpc"
                },
                "CidrBlock": {
                    "Fn::Select": [
                        0,
                        {
                            "Ref": "subnetcidrs"
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "db1"
                    }
                ]
            }
        },
        "web1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "ap-south-1a",
                "VpcId": {
                    "Ref": "myvpc"
                },
                "CidrBlock": {
                    "Fn::Select": [
                        1,
                        {
                            "Ref": "subnetcidrs"
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "web1"
                    }
                ]
            }
        },
        "app": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "ap-south-1a",
                "VpcId": {
                    "Ref": "myvpc"
                },
                "CidrBlock": {
                    "Fn::Select": [
                        2,
                        {
                            "Ref": "subnetcidrs"
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "app1"
                    }
                ]
            }
        },
        "myInternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "internet"
                    }
                ]
            }
        },
        "AttachGateway": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "myvpc"
                },
                "InternetGatewayId": {
                    "Ref": "myInternetGateway"
                }
            }
        },
        "cfrtable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "myvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "public"
                    }
                ]
            }
        },
        "cfroutetable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "myvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Private"
                    }
                ]
            }
        },
        "igwroute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "cfrtable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "myInternetGateway"
                }
            }
        },
        "webtopublic": {
            "Description": "associate web subnet to public routable",
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "cfrtable"
                },
                "SubnetId": {
                    "Ref": "web1"
                }
            }
        },
        "dbtoprivate": {
            "Description": "associate db1 subnet to private routable",
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "cfroutetable"
                },
                "SubnetId": {
                    "Ref": "db1"
                }
            }
        },
        "apptoprivate": {
            "Description": "associate app subnet to private routable",
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "cfroutetable"
                },
                "SubnetId": {
                    "Ref": "app"
                }
            }
        },
        "websec": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "creating web SecurityGroup",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 22,
                        "ToPort": 22,
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 80,
                        "ToPort": 80,
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 443,
                        "ToPort": 443,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "VpcId": {
                    "Ref": "myvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "websg"
                    }
                ]
            }
        },
        "appsec": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "creating app SecurityGroup",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 0,
                        "ToPort": 65000,
                        "CidrIp": {
                            "Ref": "vpccidr"
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "myvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "appsg"
                    }
                ]
            }
        },
        "dbsec": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "creating add SecurityGroup",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 3306,
                        "ToPort": 3306,
                        "CidrIp": {
                            "Ref": "vpccidr"
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "myvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "dbsg"
                    }
                ]
            }
        },
        "webec2": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "ImageId": {
                    "Ref": "webami"
                },
                "InstanceType": {
                    "Ref": "webinstancetype"
                },
                "KeyName": {
                    "Ref": "webkey"
                },
                "NetworkInterfaces": [
                    {
                        "AssociatePublicIpAddress": true,
                        "SubnetId": {
                            "Ref": "web1"
                        },
                        "GroupSet": [
                            {
                                "Ref": "websec"
                            }
                        ],
                        "DeviceIndex": "0"
                    }
                ]
            }
        }
    }
}
